@@ -22,11 +22,74 @@
 # include <config.h>
 #endif
 
-#if defined(HAVE_UTMPXNAME)
-# define UTMPXNAME(wtmpfile) utmpxname(wtmpfile)
-#elif defined(HAVE_UTMPNAME)
-# define UTMPXNAME(wtmpfile) utmpname(wtmpfile);
-#endif
+# if HAVE_UTMPX_H
+#  if HAVE_UTMP_H
+    /* HPUX 10.20 needs utmp.h, for the definition of e.g., UTMP_FILE.  */
+#   include <utmp.h>
+#  endif
+#  if defined _THREAD_SAFE && defined UTMP_DATA_INIT
+    /* When including both utmp.h and utmpx.h on AIX 4.3, with _THREAD_SAFE
+       defined, work around the duplicate struct utmp_data declaration.  */
+#   define utmp_data gl_aix_4_3_workaround_utmp_data
+#  endif
+#  include <utmpx.h>
+#  define UTMP_STRUCT_NAME utmpx
+#  define UT_TIME_MEMBER(UT_PTR) ((UT_PTR)->ut_tv.tv_sec)
+#  define SET_UTMP_ENT setutxent
+#  define GET_UTMP_ENT getutxent
+#  define END_UTMP_ENT endutxent
+#  ifdef HAVE_UTMPXNAME
+#   define UTMP_NAME_FUNCTION utmpxname
+#  endif
+
+# elif HAVE_UTMP_H
+
+#  include <utmp.h>
+#  define UTMP_STRUCT_NAME utmp
+#  define UT_TIME_MEMBER(UT_PTR) ((UT_PTR)->ut_time)
+#  define SET_UTMP_ENT setutent
+#  define GET_UTMP_ENT getutent
+#  define END_UTMP_ENT endutent
+#  ifdef HAVE_UTMPNAME
+#   define UTMP_NAME_FUNCTION utmpname
+#  endif
+
+# endif
+
+/* Accessor macro for the member named ut_user or ut_name.  */
+# if HAVE_UTMPX_H
+
+#  if HAVE_STRUCT_UTMPX_UT_USER
+#   define UT_USER(Utmp) ((Utmp)->ut_user)
+#  endif
+#  if HAVE_STRUCT_UTMPX_UT_NAME
+#   undef UT_USER
+#   define UT_USER(Utmp) ((Utmp)->ut_name)
+#  endif
+
+# elif HAVE_UTMP_H
+
+#  if HAVE_STRUCT_UTMP_UT_USER
+#   define UT_USER(Utmp) ((Utmp)->ut_user)
+#  endif
+#  if HAVE_STRUCT_UTMP_UT_NAME
+#   undef UT_USER
+#   define UT_USER(Utmp) ((Utmp)->ut_name)
+#  endif
+
+# endif
+
+# define HAVE_STRUCT_XTMP_UT_PID \
+    (HAVE_STRUCT_UTMP_UT_PID \
+     || HAVE_STRUCT_UTMPX_UT_PID)
+
+typedef struct UTMP_STRUCT_NAME STRUCT_UTMP;
+
+# if HAVE_STRUCT_XTMP_UT_PID
+#  define UT_PID(U) ((U)->ut_pid)
+# else
+#  define UT_PID(U) 0
+# endif
 
 /* Solaris : see http://docs.sun.com/app/docs/doc/816-5168/getutxent-3c?a=view
  * /var/adm/utmpx
@@ -38,25 +101,31 @@
  * #define    _WTMPX_FILE    "/var/adm/wtmpx"
  */
 
-#ifdef _PATH_WTMPX
-/* Linux (glibc 2) */
-# define DEFAULT_WTMP _PATH_WTMPX
-#else
-# ifdef _PATH_WTMP
-/* Linux, FreeBSD, OpenBSD */
-#  define DEFAULT_WTMP _PATH_WTMP
-# else
-#  ifdef WTMP_FILE
-/* AIX */
-#   define DEFAULT_WTMP WTMP_FILE
-#  else
-#   ifdef _WTMPX_FILE
-/* OpenSolaris */
-#    define DEFAULT_WTMP _WTMPX_FILE
-#   endif
-#  endif
+# if !defined UTMP_FILE && defined _PATH_UTMP
+#  define UTMP_FILE _PATH_UTMP
 # endif
-#endif
+
+# if !defined WTMP_FILE && defined _PATH_WTMP
+#  define WTMP_FILE _PATH_WTMP
+# endif
+
+# ifdef UTMPX_FILE /* Solaris, SysVr4 */
+#  undef UTMP_FILE
+#  define UTMP_FILE UTMPX_FILE
+# endif
+
+# ifdef WTMPX_FILE /* Solaris, SysVr4 */
+#  undef WTMP_FILE
+#  define WTMP_FILE WTMPX_FILE
+# endif
+
+# ifndef UTMP_FILE
+#  define UTMP_FILE "/etc/utmp"
+# endif
+
+# ifndef WTMP_FILE
+#  define WTMP_FILE "/etc/wtmp"
+# endif
 
 #define SECINADAY (24*60*60)    /* seconds in a day */
 
@@ -70,10 +139,10 @@
 #define R_PHANTOM     6         /* No logout record but session is stale. */
 #define R_TIMECHANGE  7         /* NEW_TIME or OLD_TIME */
 
-/* Double linked list of struct utmpx's */
+/* Double linked list of struct UTMP_STRUCT_NAME's */
 struct utmpxlist
 {
-    struct utmpx ut;
+    STRUCT_UTMP ut;
     time_t eos;                 /* end of session */
     time_t delta;               /* time difference */
     int ltype;                  /* R_NONE, R_CRASH, ... */
