@@ -2,6 +2,7 @@
 - Modularize the source code:
   new files: src/wtmpedit.c, src/wtmpxdump.c, and src/wtmpxrawdump.c
 - Rework the documentation files.
+- Portability enhancements on operating systems that do not provide 'utmpx.h'.
 
 * Changes in wtmpclean 0.8.0 -- Davide Madrisan (Dec 10 2013)
 - New output format for date and time in the raw dump mode.
